--- a/src/styles/Greetings.module.css
+++ b/src/styles/Greetings.module.css
@@ -6,18 +6,19 @@
   --button-color-hover: #FFFF26;
   --button-font-color: #606060;
   --large-margin: 15px;
-  /* width: 70%; */
-  /* background-color: gray; */
   display: flex;
   width: 100%;
   justify-content: space-around;
   max-width: 1500px;
+  flex-wrap: wrap-reverse;
+  margin: 5%;
 }
 
 .text_container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /* margin-left: 2%; */
 }
 
 .text {
@@ -78,10 +79,9 @@
   animation: ripple 600ms forwards;
 }
 
-.profile_pic {
-  /* margin-left: 40px; */
-  backgorund-color: white;
-}
+/* .profile_pic {
+  margin-right: 2%;
+} */
 
 @keyframes ripple {
   0% {
@@ -91,5 +91,17 @@
   100% {
     transform: scale(200);
     opacity: 0;
+  }
+}
+
+@media (max-width: 680px) {
+  .large {
+    font-size: calc(var(--large-font-size) - 15px);
+    font-weight: var(--large-font-weight);
+    line-height: 95%;
+  }
+  
+  .profile_pic {
+    transform: scale(0.9);
   }
 }
