--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,6 +20,7 @@ body {
 .main {
   background-color: var(--background-color);
   min-height: 100vh;
+  padding-bottom: 3rem;
 }
 
 .landing-page {
@@ -34,6 +35,7 @@ body {
 .projects-page {
   padding: 3rem 0;
   min-height: 750px;
+  position: relative;
 }
 
 .skills-page {
