fixed link color on project page

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -59,6 +59,7 @@
 .repo_name {
   text-transform: uppercase;
   font-size: var(--skill-font-size);
+  color: var(--skill-font-color);
   margin-bottom: .5rem;
   cursor: pointer;
 }
