intro style adjustment

--- a/src/styles/IconLinks.css
+++ b/src/styles/IconLinks.css
@@ -1,22 +1,18 @@
 .icon-container {
   display: flex;
-  flex-direction: column;
-  position: absolute;
-  left: 50px;
-  bottom: 30px;
+  flex-direction: row;
+  margin-left: auto;
 }
 
-.icon-container.img {
-  display: inline-block;
+a {
+  height: 1.7rem;
 }
 
-@media (max-width: 1000px) {
-  .icon-container {
-    display: flex;
-    flex-direction: row;
-    position: absolute;
-    margin: 1rem auto;
-    left: auto;
-    display: relative;
-  }
+.icon {
+  width: 1.7rem;
+  height: 1.7rem;
+  margin-left: var(--spacing-sm);
+}
+
+@media (min-width: 768px) {
 }
