--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,35 +1,33 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
   outline-style: none;
 }
 
 body {
   --background-color: #1a1a1a;
-  --primary-color: #55E8BC;
-  --secondary-color: #F4F4F4;
+  --primary-color: #55e8bc;
+  --secondary-color: #f4f4f4;
   --topic-font-size: 2rem;
-  --skill-font-color: #E0E0E0;
+  --skill-font-color: #e0e0e0;
   --skill-font-size: 1.5rem;
   --content-max-width: 1500px;
   --content-min-height: 1100px;
   --tech-box-background-color: #484949;
-  font-family: 'Mada', sans-serif;
+  --spacing: 1rem;
+  --spacing-sm: 0.5rem;
+  --spacing-lg: 2rem;
+  --spacing-larger: 4rem;
+  font-family: "Mada", sans-serif;
 }
 
 .main {
   background-color: var(--background-color);
-  min-height: 100vh;
+  /* min-height: 100vh; */
   padding-bottom: 3rem;
-}
-
-.landing-page {
-  min-height: var(--content-min-height);
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
 }
 
 .projects-page {
@@ -40,4 +38,24 @@ body {
 
 .skills-page {
   padding: 4rem 0;
+}
+
+.landing-page {
+  min-height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+@media (min-width: 730px) {
+  .landing-page {
+    min-height: 100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 }
