--- a/src/styles/Greetings.module.css
+++ b/src/styles/Greetings.module.css
@@ -2,15 +2,14 @@
   --small-font-size: 18px;
   --large-font-size: 70px;
   --large-font-weight: bold;
-  --button-color: #F4F476;
-  --button-color-hover: #FFFF26;
+  --button-color: #f4f476;
+  --button-color-hover: #ffff26;
   --button-font-color: #606060;
   --large-margin: 15px;
   display: flex;
-  width: 100%;
-  justify-content: space-around;
-  max-width: 1500px;
-  flex-wrap: wrap-reverse;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 5%;
 }
 
@@ -18,7 +17,15 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* margin-left: 2%; */
+  order: 2;
+}
+
+.profile_pic {
+  transform: scale(0.4);
+  order: 1;
+  height: 15rem;
+  display: flex;
+  place-items: center center;
 }
 
 .text {
@@ -32,7 +39,7 @@
 }
 
 .large {
-  font-size: var(--large-font-size);
+  font-size: calc(var(--large-font-size) - 20px);
   font-weight: var(--large-font-weight);
   line-height: 95%;
 }
@@ -50,7 +57,7 @@
 }
 
 .button {
-  font-family: 'Mada', sans-serif;
+  font-family: "Mada", sans-serif;
   cursor: pointer;
   padding: 5px 20px 5px 20px;
   width: fit-content;
@@ -64,7 +71,7 @@
 }
 
 .button:hover {
-  box-shadow: 2px 2px 10px 1px rgba(244,244,118,0.5);
+  box-shadow: 2px 2px 10px 1px rgba(244, 244, 118, 0.5);
 }
 
 .expand {
@@ -79,14 +86,10 @@
   animation: ripple 600ms forwards;
 }
 
-/* .profile_pic {
-  margin-right: 2%;
-} */
-
 @keyframes ripple {
   0% {
     transform: scale(0);
-    opacity: .95;
+    opacity: 0.95;
   }
   100% {
     transform: scale(200);
@@ -94,14 +97,25 @@
   }
 }
 
-@media (max-width: 680px) {
+@media (min-width: 730px) {
   .large {
-    font-size: calc(var(--large-font-size) - 15px);
+    font-size: var(--large-font-size);
     font-weight: var(--large-font-weight);
     line-height: 95%;
   }
-  
+
+  .greeting_container {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .text_container {
+    order: 1;
+  }
+
   .profile_pic {
-    transform: scale(0.9);
+    transform: scale(0.8);
+    height: 15em;
   }
 }
