--- a/src/styles/ArrowDown.css
+++ b/src/styles/ArrowDown.css
@@ -14,6 +14,10 @@
   animation: shadow 2s infinite;
 }
 
+.show {
+  display: default;
+}
+
 @keyframes up-and-down {
   0% {
     bottom: 0;
@@ -40,5 +44,11 @@
   100% {
     bottom: 5px;
     opacity: .5;
+  }
+}
+
+@media (max-width: 500px) {
+  .show {
+    display: none;
   }
 }
