--- a/src/styles/Greetings.module.css
+++ b/src/styles/Greetings.module.css
@@ -51,9 +51,10 @@
 
 .button {
   font-family: 'Mada', sans-serif;
+  width: 147px;
+  height: 40px;
   cursor: pointer;
   padding: 5px 20px 5px 20px;
-  width: fit-content;
   border-radius: 10px;
   background-color: var(--button-color);
   color: var(--button-font-color);
@@ -61,10 +62,21 @@
   margin-top: 10%;
   position: relative;
   overflow: hidden;
+  margin-right: 1rem;
+}
+
+.resume_button {
+  background-color: #F2F2F2;
+  color: var(--button-font-color);
+}
+
+.resume_button:hover {
+  box-shadow: 2px 2px 10px 1px #F2F2F2;
 }
 
 .button:hover {
   box-shadow: 2px 2px 10px 1px rgba(244,244,118,0.5);
+  color: black;
 }
 
 .expand {
@@ -102,6 +114,6 @@
   }
   
   .profile_pic {
-    transform: scale(0.9);
+    transform: scale(0.7);
   }
 }
