removed button border

--- a/src/styles/Greetings.module.css
+++ b/src/styles/Greetings.module.css
@@ -55,6 +55,7 @@
   height: 40px;
   cursor: pointer;
   padding: 5px 20px 5px 20px;
+  border: none;
   border-radius: 10px;
   background-color: var(--button-color);
   color: var(--button-font-color);
