--- a/src/styles/Greetings.module.css
+++ b/src/styles/Greetings.module.css
@@ -2,8 +2,8 @@
   --small-font-size: 18px;
   --large-font-size: 70px;
   --large-font-weight: bold;
-  --button-color: #F4F476;
-  --button-color-hover: #FFFF26;
+  --button-color: #ffffff;
+  --button-color-hover: #ffffff;
   --button-font-color: #606060;
   --large-margin: 15px;
   display: flex;
@@ -67,16 +67,16 @@
 }
 
 .resume_button {
-  background-color: #F2F2F2;
+  background-color: #ffffff;
   color: var(--button-font-color);
 }
 
 .resume_button:hover {
-  box-shadow: 2px 2px 10px 1px #F2F2F2;
+  box-shadow: var(--button-shadow-hover);
 }
 
 .button:hover {
-  box-shadow: 2px 2px 10px 1px rgba(244,244,118,0.5);
+  box-shadow: var(--button-shadow-hover);
   color: black;
 }
 
