--- a/src/styles/Logo.css
+++ b/src/styles/Logo.css
@@ -17,5 +17,6 @@
 }
 
 .logo:hover {
-  box-shadow: 0 0 10px 2px var(--primary-color);
+  box-shadow: 3px 3px 8px 0px var(--secondary-color);
+  transition: 0.2s;
 }
