--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -24,7 +24,7 @@
   margin-top: 3rem;
   margin-left: 1rem;
   background-color: var(--primary-color);
-  box-shadow: 0 0 10px 0 var(--primary-color);
+  /* box-shadow: 0 0 10px 0 var(--primary-color); */
 }
 
 .repo_container {
