migrate to react 18

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   box-sizing: border-box;
   outline-style: none;
@@ -14,15 +16,15 @@ body {
   --content-max-width: 1500px;
   --content-min-height: 1100px;
   --tech-box-background-color: #ffffff;
-  --button-shadow:2px 2px 10px 1px #d3d3d380;
-  --button-shadow-hover:2px 2px 10px 1px #dbdbdb80;
+  --button-shadow: 2px 2px 10px 1px #d3d3d380;
+  --button-shadow-hover: 2px 2px 10px 1px #dbdbdb80;
   font-family: 'Mada', sans-serif;
 }
 
 .main {
   background-color: var(--background-color);
   min-height: 100vh;
-  padding-bottom: 3rem;
+  /* padding-bottom: 3rem; */
 }
 
 .landing-page {
